--- a/index.html
+++ b/index.html
@@ -61,19 +61,17 @@
                         <div class="collapse navbar-collapse" id="navbarsExample04">
                            <ul class="navbar-nav mr-auto">
                               <li class="nav-item active">
-                                 <a class="nav-link" href="#">Home</a>
+                                 <a class="nav-link" href="/">Главная</a>
+                              </li>
+                             
+                              <li class="nav-item">
+                                 <a class="nav-link" href="#service"> Сервисы</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="#"> About  </a>
+                                 <a class="nav-link" href="#contact">Контакты</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="#service"> Service</a>
-                              </li>
-                              <li class="nav-item">
-                                 <a class="nav-link" href="#contact">Contact</a>
-                              </li>
-                              <li class="nav-item">
-                                 <a class="nav-link" href="#">Sign Up</a>
+                                 <a class="nav-link" href="/login/">LOGIN</a>
                               </li>
                            </ul>
                         </div>
