--- a/index.html
+++ b/index.html
@@ -47,9 +47,7 @@
                   <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col logo_section">
                      <div class="full">
                         <div class="center-desk">
-                           <div class="logo">
-                              <a href="index.html"><img src="images/logo.png" alt="#" /></a>
-                           </div>
+                           
                         </div>
                      </div>
                   </div>
@@ -71,7 +69,7 @@
                                  <a class="nav-link" href="#contact">Контакты</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="/login/">LOGIN</a>
+                                 <a class="nav-link" href="https://stop.vass-group.xyz/">LOGIN</a>
                               </li>
                            </ul>
                         </div>
