--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                   <div class="text-bg">
                      <h1>Мощное решение<br> вашего проекта</h1>
                      <span>Новые технологии</span>
-                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud </p>
+                     <p> </p>
                      
                   </div>
                </div>
@@ -175,7 +175,7 @@
                <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
                   <div class="Services-box">
                      <i><img src="images/service6.png" alt="#" /></i>
-                     <h3>Сайт "под ключ"</h3>
+                     <h3>Сайт на заказ</h3>
                      <p>Создание, оформлени, поддержка сайта на заказ.</p>
                   </div>
                </div>
